# yours-scently-be

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/: commit_template.txt  pull_request_template.md
.github/workflows/: checks.yml  dev-deploy.yml
apps/commerce/migrations/: 0001_initial.py  0002_cartitem.py  0003_alter_cartitem_product_and_more.py
apps/commerce/models/: __init__.py  cart.py  cart_item.py
apps/product/: urls.py
apps/product/migrations/: 0001_initial.py  0002_alter_product_product_img_url.py  0002_alter_product_product_img_url_perfume.py  0002_initial.py  0003_alter_usagehistory_user.py  0003_alter_usagehistory_user_like.py  0003_merge_20250730_1725.py  0004_merge_20250731_1537.py  0004_usagehistory.py  0005_like.py
apps/product/models/: __init__.py  accord.py  like.py  perfume.py  product.py  usage_history.py
apps/product/serializers/: like_list_serializer.py  like_serializer.py  product_serializer.py  product_serializers.py
apps/product/tests/: conftest.py  test_like_list.py  test_product_like.py  test_product_list.py
apps/product/views/: like_list_view.py  like_views.py  product.py  product_views.py
apps/products/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/products/models/: __init__.py  product.py
apps/recommendation/migrations/: 0001_initial.py  0002_recommendationhistory.py
apps/review/models/: __init__.py  (+2 more)
apps/users/: tasks.py  urls.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py
core/utils/: base62.py
resources/nginx/: Dockerfile  local.conf  prod.conf
resources/scripts/: test.sh
(+59 files in other folders)
