[project]
name = "yours-scently"
version = "0.1.0"
description = ""
authors = [
    {name = "kyukyu300",email = "kyujin1252@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django-stubs (>=5.2.2,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.1,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile="black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.13
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.local"
